Name:                   median-set
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Simple zipper-of-multisets for forged incremental median
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Median
  Build-Depends:        base >= 4.8 && < 5
                      , multiset

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -threaded
  Main-Is:              Spec.hs
  Other-Modules:        Data.Median
                        Data.MedianSpec
  Build-Depends:        base
                      , multiset
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances

Benchmark bench
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , bench
  Ghc-Options:          -Wall -threaded
  Main-Is:              Bench.hs
  Other-Modules:        Data.Median
  Build-Depends:        base
                      , multiset
                      , criterion

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/median-set
